Optimized folder structure New codes