@@ -1,4 +1,4 @@
-package com.tempdecal.leetcode;
+package com.tempdecal.leetcode.twopointers;
 
 import java.util.List;
 import java.util.Objects;
@@ -8,7 +8,7 @@ public class ValidPalindrome {
     public static boolean pointer(String s) {
         String cleanedString = s.toLowerCase().replaceAll("[^a-z0-9]", "");
         int stringLength = cleanedString.length();
-        int middle = stringLength % 2 == 0 ? cleanedString.length() / 2 : (int) stringLength / 2;
+        int middle = stringLength / 2;
         for (int i = 0; i < middle; i++) {
             if (cleanedString.charAt(i) != cleanedString.charAt(stringLength - 1 - i)) return false;
         }
@@ -24,7 +24,7 @@ public class ValidPalindrome {
         if (str.size() == 1 || str.isEmpty()) {
             return true;
         }
-        if ((Objects.equals(str.get(0), str.get(str.size() - 1)))) {
+        if ((Objects.equals(str.getFirst(), str.getLast()))) {
             return checkString(str.subList(1, str.size() - 1));
         }
         return false;
